Form New for FileUploads

--- a/app/views/file_uploads/new.html.erb
+++ b/app/views/file_uploads/new.html.erb
@@ -1,2 +1,7 @@
-<h1>FileUploads#new</h1>
-<p>Find me in app/views/file_uploads/new.html.erb</p>
+<h1>Upload for Bucket <%= @bucket.name %></h1>
+
+<%= form_with model: @bucket, url: bucket_file_uploads_path(@bucket),
+              method: :post, local: true do |f| %>
+  <%= f.file_field :files, multiple: true %><br /><br />
+  <%= f.submit 'Upload' %>
+<% end %>
